--- a/index.html
+++ b/index.html
@@ -1,85 +1,162 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>3D Model Viewer</title>
-  <style>
-    body, html {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-    }
+    <meta charset="UTF-8">
+    <link rel="icon" href="https://storage.yandexcloud.net/mymodels/nut.jpg" type="image/x-icon">
+    <link rel="icon" href="https://storage.yandexcloud.net/mymodels/favicon.ico" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Текущие проекты. СтройОборудование.</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+            background: url('background.jpg') no-repeat center center fixed;
+            background-size: cover;
+            display: flex;
+            justify-content: center;
+            min-height: 100vh;
+        }
 
-    #viewer {
-      width: 100%;
-      height: 100vh;
-    }
-  </style>
-  <script src="https://developer.api.autodesk.com/viewingservice/v1/viewers/desktop/viewer3D.min.js"></script>
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            padding: 2vw;
+            box-sizing: border-box;
+            background: rgba(255, 255, 255, 0.9);
+            box-shadow: 0 0 1vw rgba(0, 0, 0, 0.2);
+            overflow-y: auto;
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 2em;
+            margin-bottom: 1.5em;
+        }
+
+        .grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+            gap: 2vw;
+            padding: 2vw 0;
+        }
+
+        .project {
+            text-align: center;
+            background: #fff;
+            padding: 1em;
+            border-radius: 1em;
+            box-shadow: 0 0 0.5em rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            height: 350px;
+            box-sizing: border-box;
+            overflow: hidden;
+        }
+
+        .project-link {
+            text-decoration: none;
+            color: black;
+            font-weight: bold;
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            width: 100%;
+        }
+
+        .model-container {
+            flex-grow: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            min-height: 0;
+        }
+
+        .project-title {
+            margin: 0.8em 0 0 0;
+            padding: 0;
+            flex-shrink: 0;
+            font-size: 1.1em;
+        }
+
+        @media (max-width: 768px) {
+            .grid {
+                grid-template-columns: 1fr;
+            }
+            
+            .project {
+                height: 300px;
+            }
+        }
+    </style>
+    <script src="https://cdn.babylonjs.com/babylon.js"></script>
+    <script>
+        async function loadModels() {
+            try {
+                const response = await fetch('https://storage.yandexcloud.net/mymodels/models.txt', { mode: 'cors' });
+                if (!response.ok) throw new Error(`Ошибка HTTP: ${response.status}`);
+
+                const text = await response.text();
+                const lines = text.split('\n').filter(line => line.trim() !== '');
+
+                const grid = document.querySelector('.grid');
+                grid.innerHTML = '';
+
+                lines.forEach((line) => {
+                    const [name, url] = line.split(',').map(part => part.trim());
+
+                    if (name && url) {
+                        const projectDiv = document.createElement('div');
+                        projectDiv.className = 'project';
+                        projectDiv.innerHTML = ` 
+                            <a href="viewer.html?model=${encodeURIComponent(url)}" class="project-link">
+                                <div class="model-container">
+                                    <canvas id="scene${name}" width="100%" height="100%"></canvas>
+                                </div>
+                                <p class="project-title">${name}</p>
+                            </a>
+                        `;
+                        grid.appendChild(projectDiv);
+                        loadBabylonModel(url, `scene${name}`);
+                    }
+                });
+            } catch (error) {
+                console.error("Ошибка загрузки списка моделей:", error);
+                document.querySelector('.grid').innerHTML = `
+                    <div style="grid-column:1/-1;text-align:center;color:red;">
+                        Ошибка загрузки данных. Пожалуйста, попробуйте позже.
+                    </div>
+                `;
+            }
+        }
+
+        function loadBabylonModel(url, canvasId) {
+            const canvas = document.getElementById(canvasId);
+            const engine = new BABYLON.Engine(canvas, true);
+            const scene = new BABYLON.Scene(engine);
+
+            BABYLON.SceneLoader.Append('', url, scene, () => {
+                scene.createDefaultCameraOrLight(true, true, true);
+                scene.createDefaultEnvironment();
+                engine.runRenderLoop(() => {
+                    scene.render();
+                });
+            });
+
+            window.addEventListener('resize', () => {
+                engine.resize();
+            });
+        }
+
+        document.addEventListener("DOMContentLoaded", loadModels);
+    </script>
 </head>
 <body>
-  <div id="viewer"></div>
-
-  <script>
-    // Ваши Client ID и Client Secret
-    const clientId = KOl4YRq4ZMorDFdoZwyqRsskBrO32CSXRGq4WgGydMeiDGKq;
-    const clientSecret = lYFHab24T8ZG8FCU2yL9u7lGnq16lfu0IWuedH3M7tWimxgbcoiA6vLDN6vbsmn5;
-    
-    // Функция для получения Access Token
-    function getAccessToken() {
-      const url = 'https://developer.api.autodesk.com/authentication/v1/authenticate';
-      const data = {
-        client_id: clientId,
-        client_secret: clientSecret,
-        grant_type: 'client_credentials',
-        scope: 'data:read'
-      };
-
-      return fetch(url, {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
-        body: new URLSearchParams(data)
-      })
-      .then(response => response.json())
-      .then(data => data.access_token)
-      .catch(error => {
-        console.error('Error getting access token:', error);
-      });
-    }
-
-    // Функция для инициализации и отображения модели
-    function launchViewer(urn) {
-      getAccessToken().then(accessToken => {
-        if (accessToken) {
-          const options = {
-            env: 'AutodeskProduction',
-            accessToken: accessToken
-          };
-
-          Autodesk.Viewing.Initializer(options, function() {
-            const viewerDiv = document.getElementById('viewer');
-            const viewer = new Autodesk.Viewing.GuiViewer3D(viewerDiv);
-            viewer.start();
-
-            const documentId = 'urn:' + urn;  // Модель должна быть в формате URN
-            Autodesk.Viewing.Document.load(documentId, onDocumentLoadSuccess, onDocumentLoadFailure);
-          });
-        }
-      });
-    }
-
-    function onDocumentLoadSuccess(doc) {
-      const viewable = doc.getRoot().getDefaultGeometry();
-      viewer.loadDocumentNode(doc, viewable);
-    }
-
-    function onDocumentLoadFailure(viewerError) {
-      console.error('Error loading document: ', viewerError);
-    }
-
-    // Загрузка модели
-    launchViewer('model1'); // Замените на имя вашей модели (без расширения)
-  </script>
+    <div class="container">
+        <h1>Текущие проекты. СтройОборудование.</h1>
+        <div class="grid">
+            <!-- Данные загрузятся через JavaScript -->
+        </div>
+    </div>
 </body>
 </html>
