--- a/viewer.html
+++ b/viewer.html
@@ -1,125 +1,191 @@
 <!DOCTYPE html>
- <html lang="ru">
- <head>
-     <meta charset="UTF-8">
-     <link rel="icon" href="https://storage.yandexcloud.net/mymodels/nut.jpg" type="image/x-icon">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Текущие проекты. СтройОборудование.</title>
-     <style>
-         body {
-             margin: 0;
-             padding: 0;
-             background: url('background.jpg') no-repeat center center fixed;
-             background-size: cover;
-             display: flex;
-             justify-content: center;
-         }
- 
-         .container {
-             width: 100%;
-             max-width: 1200px; /* Ограничение максимальной ширины контейнера */
-             padding: 20px;
-             box-sizing: border-box;
-             background: rgba(255, 255, 255, 0.9);
-             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-             overflow-y: auto;
-         }
- 
-         h1 {
-             text-align: center;
-         }
- 
-         .grid {
-             display: grid;
-             grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); /* Автоматическое заполнение с минимальной шириной блоков */
-             gap: 20px; /* Промежутки между блоками */
-             padding: 20px 0;
-         }
- 
-         .project {
-             text-align: center;
-             background: #fff;
-             padding: 10px;
-             border-radius: 10px;
-             box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-             display: flex;
-             flex-direction: column;
-             justify-content: space-between;
-             height: 100%;
-             box-sizing: border-box; /* Включение padding и border в размеры */
-             margin: 10px; /* Добавление промежутков со всех сторон */
-         }
- 
-         model-viewer {
-             width: 100%;
-             height: 200px;
-             cursor: pointer;
-             object-fit: contain; /* Сохраняет пропорции модели */
-             transition: height 0.3s ease;
-         }
- 
-         .project a {
-             text-decoration: none;
-             color: black;
-             font-weight: bold;
-             display: block;
-             margin-top: 10px;
-         }
- 
-         @media (max-width: 768px) {
-             model-viewer {
-                 height: 150px; /* Меняем размер модели для маленьких экранов */
-             }
-         }
-     </style>
-     <script type="module" src="https://unpkg.com/@google/model-viewer@latest/dist/model-viewer.min.js"></script>
-     <script type="module" src="https://cdn.jsdelivr.net/npm/@google/model-viewer@latest/dist/model-viewer.min.js"></script>
-     <script>
-         async function loadModels() {
-             try {
-                 const response = await fetch('https://storage.yandexcloud.net/mymodels/models.txt', { mode: 'cors' });
-                 if (!response.ok) throw new Error(`Ошибка HTTP: ${response.status}`);
- 
-                 const text = await response.text();
-                 const lines = text.split('\n').filter(line => line.trim() !== '');
- 
-                 const grid = document.querySelector('.grid');
-                 grid.innerHTML = '';
- 
-                 lines.forEach((line) => {
-                     const [name, url] = line.split(',').map(part => part.trim());
- 
-                     if (name && url) {
-                         const projectDiv = document.createElement('div');
-                         projectDiv.className = 'project';
-                         projectDiv.innerHTML = `
-                             <a href="viewer.html?model=${encodeURIComponent(url)}">
-                                 <model-viewer src="${url}" 
-                                 poster="https://storage.yandexcloud.net/mymodels/label_1.png"
-                                 auto-rotate 
-                                 camera-controls 
-                                 crossOrigin="anonymous">
-                                 </model-viewer>
-                                 <p>${name}</p>
-                             </a>
-                         `;
-                         grid.appendChild(projectDiv);
-                     }
-                 });
-             } catch (error) {
-                 console.error("Ошибка загрузки списка моделей:", error);
-             }
-         }
- 
-         document.addEventListener("DOMContentLoaded", loadModels);
-     </script>
- </head>
- <body>
-     <div class="container">
-         <h1>Текущие проекты. СтройОборудование.</h1>
-         <div class="grid">
-             <!-- Данные загрузятся через JavaScript -->
-         </div>
-     </div>
- </body>
- </html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link rel="icon" href="https://storage.yandexcloud.net/mymodels/favicon.ico" type="image/x-icon"/>
+  <title>Просмотр модели</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      background: url('background.jpg') no-repeat center center fixed;
+      background-size: cover;
+    }
+
+    canvas {
+      width: 80%;
+      height: 80vh;
+      background: white;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      position: relative;
+    }
+
+    .description {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      background: rgba(255, 255, 255, 0.9);
+      padding: 12px 16px;
+      border: 1px solid #999;
+      border-radius: 0;
+      font-size: 14px;
+      color: #333;
+      max-width: 25%;
+      text-align: left;
+      z-index: 1;
+      box-sizing: border-box;
+    }
+
+    .description strong {
+      display: block;
+      margin-bottom: 6px;
+    }
+
+    .controls {
+      margin-top: 20px;
+      display: flex;
+      gap: 10px;
+      flex-wrap: wrap;
+      justify-content: center;
+      background-color: transparent;
+      border: none;
+    }
+
+    .controls button {
+      padding: 15px;
+      font-size: 30px;
+      cursor: pointer;
+      border: none;
+      background: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 50px;
+      height: 50px;
+      border-radius: 5px;
+      color: white;
+    }
+
+    .controls button:hover {
+      background: white;
+    }
+
+    .projects-button {
+      margin-top: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+      width: auto;
+      height: auto;
+      background: #c0c0c0;
+      color: black;
+      border-radius: 5px;
+    }
+
+    .projects-button:hover {
+      background: #808080;
+    }
+
+    .arrow-button {
+      background: black;
+      color: white;
+      border-radius: 5px;
+      width: 50px;
+      height: 50px;
+      font-size: 30px;
+    }
+  </style>
+  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script>
+    let currentAzimuth = 0;
+
+    document.addEventListener("DOMContentLoaded", () => {
+      const params = new URLSearchParams(window.location.search);
+      const modelUrl = params.get("model");
+
+      if (modelUrl) {
+        const canvas = document.getElementById("modelCanvas");
+        const engine = new BABYLON.Engine(canvas, true);
+        const scene = new BABYLON.Scene(engine);
+
+        BABYLON.SceneLoader.Append("", modelUrl, scene, () => {
+          scene.createDefaultCameraOrLight(true, true, true);
+          scene.createDefaultEnvironment();
+          engine.runRenderLoop(() => {
+            scene.render();
+          });
+        });
+
+        fetch("https://storage.yandexcloud.net/mymodels/models.txt")
+          .then(response => response.text())
+          .then(text => {
+            const lines = text.split("\n");
+            let descriptionFound = false;
+
+            for (const line of lines) {
+              const parts = line.split(",");
+
+              if (parts.length >= 3) {
+                const name = parts[0];
+                const url = parts[1];
+                const description = parts.slice(2).join(",");
+
+                if (url.trim() === modelUrl) {
+                  document.getElementById("descriptionText").textContent = description.trim() || "Описание модели не найдено.";
+                  descriptionFound = true;
+                  break;
+                }
+              }
+            }
+
+            if (!descriptionFound) {
+              document.getElementById("descriptionText").textContent = "Описание модели не найдено.";
+            }
+          })
+          .catch(err => {
+            console.error("Ошибка загрузки описания:", err);
+            document.getElementById("descriptionText").textContent = "Ошибка загрузки описания.";
+          });
+
+      } else {
+        alert("Ошибка: URL модели не указан!");
+      }
+    });
+
+    function rotate(degrees) {
+      currentAzimuth = (currentAzimuth + degrees + 360) % 360;
+      const camera = scene.activeCamera;
+      camera.alpha = BABYLON.Tools.ToRadians(currentAzimuth);
+    }
+
+    function setTopView() {
+      const camera = scene.activeCamera;
+      camera.beta = BABYLON.Tools.ToRadians(90);
+    }
+  </script>
+</head>
+<body>
+  <canvas id="modelCanvas"></canvas>
+
+  <div class="description">
+    <strong>Комментарий:</strong>
+    <span id="descriptionText">Загрузка описания...</span>
+  </div>
+
+  <div class="controls">
+    <button class="arrow-button" onclick="rotate(-90)">⬅️</button>
+    <button class="arrow-button" onclick="setTopView()">⬇️</button>
+    <button class="arrow-button" onclick="rotate(90)">➡️</button>
+  </div>
+
+  <button class="projects-button" onclick="location.href='index.html'">
+    ПРОЕКТЫ
+  </button>
+</body>
+</html>
