--- a/viewer.html
+++ b/viewer.html
@@ -101,7 +101,9 @@
       font-size: 30px;
     }
   </style>
+  <script src="https://cdn.babylonjs.com/loaders/babylon.glTF2FileLoader.js"></script>
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  
   <script>
     let currentAzimuth = 0;
 
