--- a/viewer.html
+++ b/viewer.html
@@ -1,175 +1,112 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="icon" href="https://storage.yandexcloud.net/mymodels/favicon.ico" type="image/x-icon"/>
-  <title>Просмотр модели</title>
+  <meta charset="UTF-8">
+  <title>Babylon.js - Измерение расстояния с Ctrl и шариками</title>
   <style>
-    body {
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      background: url('background.jpg') no-repeat center center fixed;
-      background-size: cover;
-    }
-
-    canvas {
-      width: 80%;
-      height: 80vh;
-      background: white;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .description {
+    html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; }
+    #renderCanvas { width: 100%; height: 100%; touch-action: none; }
+    #distanceDisplay {
       position: absolute;
       top: 10px;
       left: 10px;
-      background: rgba(255, 255, 255, 0.9);
-      padding: 12px 16px;
-      border: 1px solid #999;
-      font-size: 14px;
-      color: #333;
-      max-width: 25%;
-      z-index: 1;
-    }
-
-    .description strong {
-      display: block;
-      margin-bottom: 6px;
-    }
-
-    .controls {
-      margin-top: 20px;
-      display: flex;
-      gap: 10px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .controls button {
-      font-size: 30px;
-      cursor: pointer;
-      background: black;
       color: white;
-      border: none;
-      border-radius: 5px;
-      width: 50px;
-      height: 50px;
-    }
-
-    .controls button:hover {
-      background: #444;
-    }
-
-    .projects-button {
-      margin-top: 10px;
-      padding: 10px 20px;
-      font-size: 16px;
-      background: #c0c0c0;
-      color: black;
-      border-radius: 5px;
-    }
-
-    .projects-button:hover {
-      background: #808080;
+      font-size: 18px;
+      background: rgba(0,0,0,0.5);
+      padding: 8px;
+      border-radius: 8px;
     }
   </style>
-
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
-  <script src="https://cdn.babylonjs.com/loaders/babylon.glTF2FileLoader.js"></script>
 </head>
 <body>
-  <canvas id="modelCanvas"></canvas>
-
-  <div class="description">
-    <strong>Комментарий:</strong>
-    <span id="descriptionText">Загрузка описания...</span>
-  </div>
-
-  <div class="controls">
-    <button onclick="rotate(-90)">⬅️</button>
-    <button onclick="setTopView()">⬇️</button>
-    <button onclick="rotate(90)">➡️</button>
-  </div>
-
-  <button class="projects-button" onclick="location.href='index.html'">ПРОЕКТЫ</button>
+  <canvas id="renderCanvas"></canvas>
+  <div id="distanceDisplay">Расстояние: 0 м</div>
 
   <script>
-    let scene, engine, currentAzimuth = 0;
+    const canvas = document.getElementById('renderCanvas');
+    const engine = new BABYLON.Engine(canvas, true);
+    let scene, camera;
 
-    document.addEventListener("DOMContentLoaded", () => {
-      const params = new URLSearchParams(window.location.search);
-      const modelUrl = params.get("model");
+    let ctrlDown = false; // Флаг для проверки зажатия Ctrl
 
-      if (!modelUrl) {
-        alert("Ошибка: URL модели не указан!");
-        return;
-      }
-
-      const canvas = document.getElementById("modelCanvas");
-      engine = new BABYLON.Engine(canvas, true);
-      scene = new BABYLON.Scene(engine);
-
-      BABYLON.SceneLoader.Append("", modelUrl, scene, () => {
-        const camera = new BABYLON.ArcRotateCamera("Camera", Math.PI / 2, Math.PI / 2.5, 5, BABYLON.Vector3.Zero(), scene);
-        camera.attachControl(canvas, true);
-        camera.wheelDeltaPercentage = 0.01;
-        scene.activeCamera = camera;
-
-        const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(1, 1, 0), scene);
-        scene.createDefaultEnvironment();
-
-        engine.runRenderLoop(() => {
-          scene.render();
-        });
-      }, null, (scene, message, exception) => {
-        console.error("Ошибка загрузки модели:", message, exception);
-        alert("Не удалось загрузить модель. Проверьте URL.");
-      });
-
-      window.addEventListener("resize", () => {
-        engine.resize();
-      });
-
-      fetch("https://storage.yandexcloud.net/mymodels/models.txt")
-        .then(res => res.text())
-        .then(text => {
-          const lines = text.split("\n");
-          for (const line of lines) {
-            const parts = line.split(",");
-            if (parts.length >= 3) {
-              const name = parts[0].trim();
-              const url = parts[1].trim();
-              const description = parts.slice(2).join(",").trim();
-              if (decodeURIComponent(modelUrl) === url) {
-                document.getElementById("descriptionText").textContent = description || "Описание отсутствует.";
-                return;
-              }
-            }
-          }
-          document.getElementById("descriptionText").textContent = "Описание модели не найдено.";
-        })
-        .catch(error => {
-          console.error("Ошибка загрузки описания:", error);
-          document.getElementById("descriptionText").textContent = "Ошибка загрузки описания.";
-        });
+    window.addEventListener('DOMContentLoaded', () => {
+      scene = createScene();
+      engine.runRenderLoop(() => scene.render());
     });
 
-    function rotate(degrees) {
-      if (!scene || !scene.activeCamera) return;
-      currentAzimuth = (currentAzimuth + degrees + 360) % 360;
-      scene.activeCamera.alpha = BABYLON.Tools.ToRadians(currentAzimuth);
-    }
+    window.addEventListener('resize', () => engine.resize());
 
-    function setTopView() {
-      if (!scene || !scene.activeCamera) return;
-      scene.activeCamera.beta = BABYLON.Tools.ToRadians(90);
+    // Отслеживание нажатия Ctrl
+    window.addEventListener('keydown', (e) => {
+      if (e.key === 'Control') {
+        ctrlDown = true;
+      }
+    });
+
+    window.addEventListener('keyup', (e) => {
+      if (e.key === 'Control') {
+        ctrlDown = false;
+      }
+    });
+
+    function createScene() {
+      const scene = new BABYLON.Scene(engine);
+      scene.clearColor = new BABYLON.Color4(0.1, 0.1, 0.1, 1);
+
+      camera = new BABYLON.ArcRotateCamera("camera", Math.PI / 2, Math.PI / 2.5, 5, BABYLON.Vector3.Zero(), scene);
+      camera.attachControl(canvas, true);
+
+      const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
+
+      // Загрузка модели
+      BABYLON.SceneLoader.Append("https://models.babylonjs.com/", "boombox.glb", scene, function (scene) {
+        console.log("Модель загружена!");
+      });
+
+      // Измерение расстояния
+      let points = [];
+      let markers = [];
+      let line = null;
+      const distanceDisplay = document.getElementById('distanceDisplay');
+
+      scene.onPointerObservable.add((pointerInfo) => {
+        if (pointerInfo.type === BABYLON.PointerEventTypes.POINTERPICK) {
+          const pickResult = pointerInfo.pickInfo;
+          if (pickResult.hit && ctrlDown) {
+            const pickedPoint = pickResult.pickedPoint.clone();
+            points.push(pickedPoint);
+
+            // Создаём маленький шарик в точке выбора
+            const sphere = BABYLON.MeshBuilder.CreateSphere("marker", { diameter: 0.05 }, scene);
+            sphere.position = pickedPoint;
+            sphere.material = new BABYLON.StandardMaterial("markerMat", scene);
+            sphere.material.diffuseColor = new BABYLON.Color3(1, 0, 0); // Красный цвет
+            markers.push(sphere);
+
+            if (points.length === 2) {
+              const distance = BABYLON.Vector3.Distance(points[0], points[1]);
+              distanceDisplay.innerText = `Расстояние: ${distance.toFixed(2)} м`;
+
+              if (line) {
+                line.dispose();
+              }
+              line = BABYLON.MeshBuilder.CreateLines("line", { points: [points[0], points[1]] }, scene);
+              line.color = new BABYLON.Color3(0, 1, 0); // Зелёная линия
+
+              // Очищаем точки для следующего измерения
+              points = [];
+              // Удаляем старые маркеры через секунду
+              setTimeout(() => {
+                markers.forEach(marker => marker.dispose());
+                markers = [];
+              }, 1000);
+            }
+          }
+        }
+      });
+
+      return scene;
     }
   </script>
 </body>
