--- a/viewer.html
+++ b/viewer.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Babylon.js - Измерение расстояния с Ctrl и шариками</title>
   <style>
-    html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; }
+    html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; background: #000; }
     #renderCanvas { width: 100%; height: 100%; touch-action: none; }
     #distanceDisplay {
       position: absolute;
@@ -18,6 +18,7 @@
     }
   </style>
   <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 </head>
 <body>
   <canvas id="renderCanvas"></canvas>
@@ -28,7 +29,7 @@
     const engine = new BABYLON.Engine(canvas, true);
     let scene, camera;
 
-    let ctrlDown = false; // Флаг для проверки зажатия Ctrl
+    let ctrlDown = false;
 
     window.addEventListener('DOMContentLoaded', () => {
       scene = createScene();
@@ -37,34 +38,33 @@
 
     window.addEventListener('resize', () => engine.resize());
 
-    // Отслеживание нажатия Ctrl
     window.addEventListener('keydown', (e) => {
-      if (e.key === 'Control') {
-        ctrlDown = true;
-      }
+      if (e.key === 'Control') ctrlDown = true;
     });
 
     window.addEventListener('keyup', (e) => {
-      if (e.key === 'Control') {
-        ctrlDown = false;
-      }
+      if (e.key === 'Control') ctrlDown = false;
     });
 
     function createScene() {
       const scene = new BABYLON.Scene(engine);
-      scene.clearColor = new BABYLON.Color4(0.1, 0.1, 0.1, 1);
+      scene.clearColor = new BABYLON.Color4(0.05, 0.05, 0.05, 1);
 
-      camera = new BABYLON.ArcRotateCamera("camera", Math.PI / 2, Math.PI / 2.5, 5, BABYLON.Vector3.Zero(), scene);
+      camera = new BABYLON.ArcRotateCamera("camera", Math.PI/2, Math.PI/3, 5, BABYLON.Vector3.Zero(), scene);
       camera.attachControl(canvas, true);
 
       const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
 
-      // Загрузка модели
-      BABYLON.SceneLoader.Append("https://models.babylonjs.com/", "boombox.glb", scene, function (scene) {
-        console.log("Модель загружена!");
+      // Загружаем модель (например, бесплатная "авоська" с babylonjs-сервера)
+      BABYLON.SceneLoader.ImportMesh("", "https://models.babylonjs.com/", "BoomBox.glb", scene, function (meshes) {
+        console.log("Модель загружена:", meshes);
+
+        meshes.forEach(mesh => {
+          mesh.scaling.scaleInPlace(20);
+        });
       });
 
-      // Измерение расстояния
+      // Логика измерения
       let points = [];
       let markers = [];
       let line = null;
@@ -77,11 +77,10 @@
             const pickedPoint = pickResult.pickedPoint.clone();
             points.push(pickedPoint);
 
-            // Создаём маленький шарик в точке выбора
             const sphere = BABYLON.MeshBuilder.CreateSphere("marker", { diameter: 0.05 }, scene);
             sphere.position = pickedPoint;
             sphere.material = new BABYLON.StandardMaterial("markerMat", scene);
-            sphere.material.diffuseColor = new BABYLON.Color3(1, 0, 0); // Красный цвет
+            sphere.material.diffuseColor = new BABYLON.Color3(1, 0, 0);
             markers.push(sphere);
 
             if (points.length === 2) {
@@ -92,11 +91,9 @@
                 line.dispose();
               }
               line = BABYLON.MeshBuilder.CreateLines("line", { points: [points[0], points[1]] }, scene);
-              line.color = new BABYLON.Color3(0, 1, 0); // Зелёная линия
+              line.color = new BABYLON.Color3(0, 1, 0);
 
-              // Очищаем точки для следующего измерения
               points = [];
-              // Удаляем старые маркеры через секунду
               setTimeout(() => {
                 markers.forEach(marker => marker.dispose());
                 markers = [];
