--- a/viewer.html
+++ b/viewer.html
@@ -2,109 +2,132 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Babylon.js - Измерение расстояния с Ctrl и шариками</title>
+  <title>Просмотр модели</title>
+  <script src="https://cdn.babylonjs.com/babylon.js"></script>
+  <script src="https://cdn.babylonjs.com/loaders/babylon.glTF2FileLoader.js"></script>
   <style>
-    html, body { width: 100%; height: 100%; margin: 0; overflow: hidden; background: #000; }
-    #renderCanvas { width: 100%; height: 100%; touch-action: none; }
-    #distanceDisplay {
+    html, body {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      width: 100%;
+      height: 100%;
+      background: #222;
+    }
+    #renderCanvas {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
+    .distance-label {
       position: absolute;
-      top: 10px;
-      left: 10px;
       color: white;
-      font-size: 18px;
-      background: rgba(0,0,0,0.5);
-      padding: 8px;
-      border-radius: 8px;
+      background: rgba(0, 0, 0, 0.7);
+      padding: 4px 8px;
+      border-radius: 4px;
+      pointer-events: none;
+      font-family: sans-serif;
+      font-size: 14px;
     }
   </style>
-  <script src="https://cdn.babylonjs.com/babylon.js"></script>
-  <script src="https://cdn.babylonjs.com/loaders/babylonjs.loaders.min.js"></script>
 </head>
 <body>
-  <canvas id="renderCanvas"></canvas>
-  <div id="distanceDisplay">Расстояние: 0 м</div>
+<canvas id="renderCanvas"></canvas>
+<div id="distanceLabel" class="distance-label" style="display: none;"></div>
 
-  <script>
-    const canvas = document.getElementById('renderCanvas');
-    const engine = new BABYLON.Engine(canvas, true);
-    let scene, camera;
+<script>
+  const canvas = document.getElementById("renderCanvas");
+  const engine = new BABYLON.Engine(canvas, true);
+  let scene, pickedPoints = [], line, distanceLabel = document.getElementById('distanceLabel');
 
-    let ctrlDown = false;
+  async function createScene() {
+    scene = new BABYLON.Scene(engine);
+    scene.createDefaultCameraOrLight(true, true, true);
+    scene.createDefaultEnvironment();
 
-    window.addEventListener('DOMContentLoaded', () => {
-      scene = createScene();
-      engine.runRenderLoop(() => scene.render());
-    });
+    // Загружаем список моделей
+    const response = await fetch('https://storage.yandexcloud.net/mymodels/models.txt');
+    const text = await response.text();
+    const lines = text.split('\n').map(line => line.trim()).filter(line => line);
+    if (lines.length === 0) {
+      alert("Нет моделей в списке!");
+      return;
+    }
 
-    window.addEventListener('resize', () => engine.resize());
+    const firstModelUrl = lines[0].split(',')[1].trim(); // Берём ссылку на первую модель
+    console.log("Загружаем модель:", firstModelUrl);
 
-    window.addEventListener('keydown', (e) => {
-      if (e.key === 'Control') ctrlDown = true;
-    });
+    await BABYLON.SceneLoader.AppendAsync("", firstModelUrl, scene);
 
-    window.addEventListener('keyup', (e) => {
-      if (e.key === 'Control') ctrlDown = false;
-    });
+    // Добавляем обработчик кликов для измерений
+    scene.onPointerObservable.add((pointerInfo) => {
+      if (pointerInfo.type === BABYLON.PointerEventTypes.POINTERPICK 
+          && pointerInfo.event.button === 0 
+          && pointerInfo.event.ctrlKey) {
 
-    function createScene() {
-      const scene = new BABYLON.Scene(engine);
-      scene.clearColor = new BABYLON.Color4(0.05, 0.05, 0.05, 1);
+        const pickResult = pointerInfo.pickInfo;
+        if (pickResult.hit) {
+          const pickedPoint = pickResult.pickedPoint.clone();
+          addMarker(pickedPoint);
+          pickedPoints.push(pickedPoint);
 
-      camera = new BABYLON.ArcRotateCamera("camera", Math.PI/2, Math.PI/3, 5, BABYLON.Vector3.Zero(), scene);
-      camera.attachControl(canvas, true);
-
-      const light = new BABYLON.HemisphericLight("light", new BABYLON.Vector3(0, 1, 0), scene);
-
-      // Загружаем модель (например, бесплатная "авоська" с babylonjs-сервера)
-      BABYLON.SceneLoader.ImportMesh("", "https://models.babylonjs.com/", "BoomBox.glb", scene, function (meshes) {
-        console.log("Модель загружена:", meshes);
-
-        meshes.forEach(mesh => {
-          mesh.scaling.scaleInPlace(20);
-        });
-      });
-
-      // Логика измерения
-      let points = [];
-      let markers = [];
-      let line = null;
-      const distanceDisplay = document.getElementById('distanceDisplay');
-
-      scene.onPointerObservable.add((pointerInfo) => {
-        if (pointerInfo.type === BABYLON.PointerEventTypes.POINTERPICK) {
-          const pickResult = pointerInfo.pickInfo;
-          if (pickResult.hit && ctrlDown) {
-            const pickedPoint = pickResult.pickedPoint.clone();
-            points.push(pickedPoint);
-
-            const sphere = BABYLON.MeshBuilder.CreateSphere("marker", { diameter: 0.05 }, scene);
-            sphere.position = pickedPoint;
-            sphere.material = new BABYLON.StandardMaterial("markerMat", scene);
-            sphere.material.diffuseColor = new BABYLON.Color3(1, 0, 0);
-            markers.push(sphere);
-
-            if (points.length === 2) {
-              const distance = BABYLON.Vector3.Distance(points[0], points[1]);
-              distanceDisplay.innerText = `Расстояние: ${distance.toFixed(2)} м`;
-
-              if (line) {
-                line.dispose();
-              }
-              line = BABYLON.MeshBuilder.CreateLines("line", { points: [points[0], points[1]] }, scene);
-              line.color = new BABYLON.Color3(0, 1, 0);
-
-              points = [];
-              setTimeout(() => {
-                markers.forEach(marker => marker.dispose());
-                markers = [];
-              }, 1000);
-            }
+          if (pickedPoints.length === 2) {
+            drawMeasurement();
           }
         }
-      });
+      }
+    });
 
-      return scene;
+    return scene;
+  }
+
+  function addMarker(position) {
+    const sphere = BABYLON.MeshBuilder.CreateSphere("marker", { diameter: 0.05 }, scene);
+    sphere.position = position;
+    const material = new BABYLON.StandardMaterial("markerMat", scene);
+    material.diffuseColor = new BABYLON.Color3(1, 0, 0); // Красный
+    sphere.material = material;
+  }
+
+  function drawMeasurement() {
+    if (line) {
+      line.dispose();
     }
-  </script>
+
+    const points = [pickedPoints[0], pickedPoints[1]];
+    line = BABYLON.MeshBuilder.CreateLines("line", { points: points }, scene);
+    line.color = new BABYLON.Color3(1, 1, 0); // Жёлтая линия
+
+    const distance = BABYLON.Vector3.Distance(points[0], points[1]);
+    showDistanceLabel(distance, points);
+    
+    pickedPoints = []; // Сбросить точки после измерения
+  }
+
+  function showDistanceLabel(distance, points) {
+    const midpoint = BABYLON.Vector3.Center(points[0], points[1]);
+    const projected = BABYLON.Vector3.Project(
+      midpoint,
+      BABYLON.Matrix.Identity(),
+      scene.getTransformMatrix(),
+      scene.activeCamera.viewport.toGlobal(engine.getRenderWidth(), engine.getRenderHeight())
+    );
+
+    distanceLabel.style.left = (projected.x - 30) + "px";
+    distanceLabel.style.top = (projected.y - 20) + "px";
+    distanceLabel.innerText = distance.toFixed(2) + " м";
+    distanceLabel.style.display = "block";
+  }
+
+  createScene().then(() => {
+    engine.runRenderLoop(() => {
+      scene.render();
+    });
+  });
+
+  window.addEventListener("resize", function () {
+    engine.resize();
+  });
+</script>
 </body>
 </html>
